--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@
 # Never ignore Asset meta data
 !/[Aa]ssets/**/*.meta
 
+# Never ignore Asset .dll files
+!/[Aa]ssets/**/*.dll
+
 # Uncomment this line if you wish to ignore the asset store tools plugin
 # /[Aa]ssets/AssetStoreTools*
 
