--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,15 @@
 # Never ignore Asset meta data
 !/[Aa]ssets/**/*.meta
 
+# Never ignore Asset .dll files
+!/[Aa]ssets/**/*.dll
+
+# Never ignore Asset .obj files
+!/[Aa]ssets/**/*.obj
+
+# Never ignore Oculus folder
+!/[Aa]ssets/Oculus/
+
 # Uncomment this line if you wish to ignore the asset store tools plugin
 # /[Aa]ssets/AssetStoreTools*
 
