--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,15 @@
 {
+	"scopedRegistries": [  
+	  {  
+		"name": "npmjs",  
+		"url": "https://registry.npmjs.org/",  
+		"scopes": [  
+			"io.extendreality"  
+		]  
+	  }  
+	],
   "dependencies": {
+	"io.extendreality.vrtk.prefabs": "1.1.10",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.ads": "2.0.8",
